Implement New Icons

--- a/wildforge/src/Styles/Navbar.scss
+++ b/wildforge/src/Styles/Navbar.scss
@@ -46,3 +46,15 @@
 .logout{
     @include mixins.logout;
 }
+
+.students{
+    @include mixins.button(students);
+}
+
+.teams{
+    @include mixins.button(teams);
+}
+
+.delete{
+    @include mixins.button(delete);
+}
