--- a/wildforge/src/Styles/variables.scss
+++ b/wildforge/src/Styles/variables.scss
@@ -15,5 +15,11 @@ $icons: (
     peer-select: url("../Images/peer-hover.png"),
     profile: url("../Images/profile.png"),
     profile-select: url("../Images/profile-hover.png"),
-    logout: url("../Images/logout.png")
+    logout: url("../Images/logout.png"),
+    teams: url("../Images/teams.png"),
+    teams-select: url("../Images/teams-hover.png"),
+    delete: url("../Images/delete.png"),
+    delete-select: url("../Images/delete-hover.png"),
+    students: url("../Images/students.png"),
+    students-select: url("../Images/students-hover.png"),
 );
