--- a/wildforge/src/Styles/Navbar.scss
+++ b/wildforge/src/Styles/Navbar.scss
@@ -3,10 +3,10 @@
 
 .parent {
     width: 268px;
-    height: 100%;
+    height: 830px;
     background-color: variables.$white;
     font-size: 18px;
-    position: fixed;
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
