--- a/wildforge/src/Utils/Search/Search.scss
+++ b/wildforge/src/Utils/Search/Search.scss
@@ -1,6 +1,6 @@
 @use '../../Styles/variables.scss' as vars;
 
-input{
+.search-input{
     height: 45px;
     width: 340px;
     border-radius: 10px;
