--- a/wildforge/src/Screens/ClassManagement/ViewClass/ClassDashboard.scss
+++ b/wildforge/src/Screens/ClassManagement/ViewClass/ClassDashboard.scss
@@ -1,6 +1,11 @@
+.container{
+  display: flex;
+}
+
 .dashboard {
   display: flex;
   align-items: flex-start;
+  position: static;
 }
 
 .back-button {
