--- a/wildforge/src/Styles/mixins.scss
+++ b/wildforge/src/Styles/mixins.scss
@@ -15,6 +15,10 @@
       width: 20px;
       height: 20px;
       margin-right: 17px;
+      margin-left: 5px;
+      padding: 2px; 
+      border: 5px solid variables.$white;
+      border-radius: 10px;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -56,7 +60,7 @@
     height: 30px;
     color: variables.$red;
     font-size: 18px;
-    margin-top: 350px;
+    margin-top: 60%;
     display: flex;
     align-items: center;
     position: relative; /* Add position relative */  
