--- a/wildforge/src/Screens/ClassManagement/ViewClass/ClassDashboard.scss
+++ b/wildforge/src/Screens/ClassManagement/ViewClass/ClassDashboard.scss
@@ -1,57 +1,30 @@
-.container{
-  display: flex;
-}
+$back-icon: url('../../../Images/back.png');
 
 .dashboard {
   display: flex;
   align-items: flex-start;
   position: static;
-}
-
-.back-button {
-  margin-top: 20px;
-}
-
-.status-boxes {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 20px;
-  margin-right: 20px;
-}
-
-.status-box {
-  width: 300px;
-  border: 1px solid #ddd;
-  border-radius: 10px;
-  padding: 20px;
-  margin-bottom: 20px;
-
-  h3 {
-    font-size: 20px;
-    margin-bottom: 10px;
-  }
-
-  p {
-    font-size: 16px;
-    margin-bottom: 5px;
-  }
-
-  h1 {
-    font-size: 24px;
-    margin-top: 10px;
-  }
-}
-
-.class-logs {
-  flex-grow: 1;
-  border: 1px solid #ddd;
-  border-radius: 10px;
-  padding: 20px;
-  margin-top: 20px;
+  flex-direction: row;
+  width: 100%;
   height: 100%;
 }
 
-.search-bar {
-  margin-bottom: 20px;
+.status-box {
+  background-color: white;
+  margin-top: 20px;
+  width: 435px;
+  height: 226px;
+  margin-top: 20px;
+  margin-left: 20px;
+  border-radius: 10px;
 }
+
+.class-logs {
+  border: 1px solid #ddd;
+  background-color: white;
+  border-radius: 10px;
+  height: 100%;
+  width: 483px;
+  margin-left: 20px;
+}
+
