--- a/wildforge/src/Screens/ClassManagement/ViewClass/ClassDashboard.scss
+++ b/wildforge/src/Screens/ClassManagement/ViewClass/ClassDashboard.scss
@@ -3,10 +3,17 @@ $back-icon: url('../../../Images/back.png');
 .dashboard {
   display: flex;
   align-items: flex-start;
-  position: static;
   flex-direction: row;
+  justify-content: space-between;
   width: 100%;
   height: 100%;
+}
+
+.status-boxes {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
 }
 
 .status-box {
@@ -17,14 +24,49 @@ $back-icon: url('../../../Images/back.png');
   margin-top: 20px;
   margin-left: 20px;
   border-radius: 10px;
+  border-width: 1px;
 }
 
-.class-logs {
+.status-box-text {
+  margin-left: 20px;
+  margin-top: 20px;
+  margin-right: 20px;
+  font-size: 20px;
+
+  h3 {
+    font-size: 16px;
+    font-weight: 700;
+  }
+
+  p {
+    font-size: 14px;
+    font-weight: 400;
+  }
+
+  h1 {
+    font-size: 40px;
+    font-weight: 700;
+    float: right;
+  }
+}
+
+.class-logs-whitebox {
   border: 1px solid #ddd;
   background-color: white;
-  border-radius: 10px;
-  height: 100%;
-  width: 483px;
+  height: 100vh;
+  width: 50%;
   margin-left: 20px;
 }
 
+.class-logs-text {
+  margin-left: 40px;
+  margin-top: 30px;
+}
+
+.center-container {
+  height: 90vh;
+  margin-left: 20px;
+  width: 100vh;
+  align-items: center;
+  margin-top: 20px;
+}
