--- a/wildforge/src/Styles/variables.scss
+++ b/wildforge/src/Styles/variables.scss
@@ -22,4 +22,6 @@ $icons: (
     delete-select: url("../Images/delete-hover.png"),
     students: url("../Images/students.png"),
     students-select: url("../Images/students-hover.png"),
+    back: url("../Images/back.png"),
+    logo: url("../Images/WFLogo.png"),
 );
