--- a/wildforge/src/Screens/ClassManagement/ViewClass/ClassDashboard.scss
+++ b/wildforge/src/Screens/ClassManagement/ViewClass/ClassDashboard.scss
@@ -28,10 +28,8 @@
 }
 
 .status-box-text {
-  margin-left: 20px;
-  margin-top: 20px;
-  margin-right: 20px;
-  font-size: 20px;
+  margin: 20px;
+  
 
   h3 {
     font-size: 16px;
