--- a/wildforge/src/Screens/ClassManagement/ViewClass/EditClass.scss
+++ b/wildforge/src/Screens/ClassManagement/ViewClass/EditClass.scss
@@ -9,17 +9,15 @@
     border: 1px solid #ddd;
     background-color: vars.$white;
     height: 100%;
+    height: 100vh;
     width: 70vh;
     margin-left: 20px;
 }
 
-.white-box {
+.edit-white-container {
     background-color: vars.$white;
     border-radius: 10px;
-    height: 80%;
-    width: 50%;
-    margin-top: 3%;
-    margin-left: 3%;
+    width: 446px;
     border: 1px solid #ddd;
     display: flex;
     flex-direction: column;
@@ -38,7 +36,7 @@
     h1 {
         font-size: 30px;
         font-weight: 700;
-        margin-top: 60px;
+        margin-top: 50px;
     }
 }
 
@@ -62,9 +60,9 @@
     margin-top: 30px;
 }
 
-.center-container {
+.edit-center-container {
     height: 100%;
-    margin-left: 40px;
+    margin-left: 30px;
     width: 100vh;
     align-items: center;
     margin-top: 20px;
