--- a/wildforge/src/Screens/ClassManagement/ViewClass/ClassDashboard.scss
+++ b/wildforge/src/Screens/ClassManagement/ViewClass/ClassDashboard.scss
@@ -61,10 +61,10 @@
   margin-top: 30px;
 }
 
-.center-container {
+.dashboard-center-container {
   height: 90vh;
-  margin-left: 20px;
+  margin-left: 30px;
   width: 100vh;
-  align-items: center;
+  align-items: flex-start;
   margin-top: 20px;
 }
