--- a/wildforge/src/Screens/ClassManagement/CreateClass/CreateClassDetails.scss
+++ b/wildforge/src/Screens/ClassManagement/CreateClass/CreateClassDetails.scss
@@ -20,7 +20,7 @@
     justify-content: center;
     align-items: center;
     transform: translate(-50%, -50%);
-    width: 515px;
+    width: 515vw;
     height: 60vh;
     background-color: vars.$white;
     border-radius: 10px;
