Update Signup UI

--- a/src/screens/Signup/Signup.scss
+++ b/src/screens/Signup/Signup.scss
@@ -1,6 +1,10 @@
 @use '../../styles/variables';
 @use '../../styles/mixins';
 
+*,*:focus,*:hover{
+    outline:none;
+}
+
 .login-container{
     display: flex;
     justify-content: center;
@@ -35,12 +39,12 @@
 .yellow-on-focus{
     height: 48.25px;
     border: 1px solid variables.$shadow-normal;
-        &:hover{
-            border: 1px solid variables.$wild-yellow;
-        }
-        &:focus{
-            border: 1px solid variables.$wild-yellow;
-        }
+    &:hover{
+        border: 1px solid variables.$wild-yellow;
+    }
+    &:focus{
+        border: 3px solid variables.$wild-yellow;
+    }
 }
 
 .btn-wild-primary{
