Update Signup UI

--- a/src/screens/Signup/Signup.scss
+++ b/src/screens/Signup/Signup.scss
@@ -17,6 +17,10 @@
     padding: 5vb;
 }
 
+.bg-wild{
+    background-color: variables.$wild-yellow;
+}
+
 .wild{
     color: variables.$wild-yellow;
 }
