Initial Class Management UI Draft

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,6 +3,7 @@ $wild-brown: #9c7b16;
 $wild-yellow: #fecc00;
 $wild-black: #000000 ;
 $wild-white: #fff;
+$wild-nav-white: #F3F3F3;
 $wild-red: #FF0000;
 $wild-blue: #23CAFF;
 $wild-grey: #838f9b;
