Update Class Management UI

--- a/src/screens/class-management/index.scss
+++ b/src/screens/class-management/index.scss
@@ -38,7 +38,7 @@
     border: 2px solid variables.$wild-yellow;
 }
 
-.btn-wild-primary{
+.btn-add-primary{
     background-color: variables.$wild-yellow;
     color: variables.$wild-white;
     height: 40px;
