Add Cards Component

--- a/src/components/cards/index.scss
+++ b/src/components/cards/index.scss
@@ -6,5 +6,5 @@
         290px, 
         150px, 
         variables.$wild-yellow, 
-        variables.$wild-white, 10px, 10px, 5px, 5px);
+        variables.$wild-white);
 }
