--- a/src/screens/class-management/classes/index.scss
+++ b/src/screens/class-management/classes/index.scss
@@ -1,5 +1,5 @@
-@use '../../styles/variables';
-@use '../../styles/mixins';
+@use '../../../styles/variables';
+@use '../../../styles/mixins';
 
 *,*:focus,*:hover{
     outline:none;
