Add Join Class Feature

--- a/src/screens/class_management/join_class/index.scss
+++ b/src/screens/class_management/join_class/index.scss
@@ -1,2 +1,20 @@
 @use '../../../styles/variables';
 @use '../../../styles/mixins';
+
+.join-class-modal {    
+    width: 440px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: variables.$wild-white;
+    @include mixins.box-shadow(0, 8, 50, -5, variables.$wild-grey);
+}
+
+.join-class-close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 10px;
+    cursor: pointer;
+}
