--- a/src/components/cards/class_cards/index.scss
+++ b/src/components/cards/class_cards/index.scss
@@ -1,5 +1,5 @@
-@use '../../styles/variables';
-@use '../../styles/mixins';
+@use '../../../styles/variables';
+@use '../../../styles/mixins';
 
 .class-card{
     @include mixins.make-container(
