--- a/src/components/cards/discharge_notif/index.scss
+++ b/src/components/cards/discharge_notif/index.scss
@@ -1,5 +1,5 @@
-@use '../../styles/variables';
-@use '../../styles/mixins';
+@use '../../../styles/variables';
+@use '../../../styles/mixins';
 
 .notif-bar {    
     width: 100%;
@@ -8,6 +8,6 @@
     z-index: 1100;
     top: 0;
     left: 0;
-    background-color: variables.$wild-red;
+    background-color: variables.$wild-brown;
     @include mixins.box-shadow(0, 8, 50, -5, variables.$wild-grey);
 }
