Update Teams UI

--- a/src/screens/team_management/teams/index.scss
+++ b/src/screens/team_management/teams/index.scss
@@ -8,3 +8,13 @@
 .subheader-body{
     width: 100%;
 }
+
+.add-btn-footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    bottom: 0%;
+    left: 55%;
+    transform: translate(-50%, -50%);
+}
