Some UI Changes

--- a/src/screens/class_management/classes/index.scss
+++ b/src/screens/class_management/classes/index.scss
@@ -21,10 +21,9 @@
     }
 }
 
-.btn-join-primary {
+.btn-yellow-primary {
     background-color: variables.$wild-yellow;
     color: variables.$wild-white;
-    height: 40px;
     outline: none;
     border: none;
 
