--- a/src/components/modals/create_class/index.scss
+++ b/src/components/modals/create_class/index.scss
@@ -11,17 +11,6 @@
     @include mixins.box-shadow(0, 8, 50, -5, variables.$wild-grey);
 }
 
-.btn-create-primary{
-    background-color: variables.$wild-yellow;
-    color: variables.$wild-white;
-    height: 40px;
-    width: 150px;
-    &:hover{
-        background-color: variables.$shadow-wild-yellow;
-        color: variables.$wild-black;
-    }
-}
-
 .input-container{
     width: 100%;
     height: 40px;
@@ -33,7 +22,7 @@
 
 .code-content{
     width: 200px;
-    height: 40px;
+    height: 6vh;
     background-color: variables.$wild-grey;
     color: variables.$wild-black;
 }
