--- a/src/screens/team_management/teams/index.scss
+++ b/src/screens/team_management/teams/index.scss
@@ -18,3 +18,26 @@
     left: 55%;
     transform: translate(-50%, -50%);
 }
+
+.notif-pending-bar {
+    text-align: center;
+    color: white;
+    width: 100%;
+    height: 2rem;
+    position: fixed;
+    z-index: 1100;
+    top: 0;
+    left: 0;
+    background-color: variables.$wild-brown;
+    @include mixins.box-shadow(0, 8, 50, -5, variables.$wild-grey);
+}
+
+.notif-pending-btn{
+    padding-top: 0;
+    height: 2rem;
+    color: variables.$wild-white;
+    text-decoration: underline;
+    &:hover{
+        color: variables.$wild-black;
+    }
+}
