Recent Team Updates

--- a/src/components/modals/create_team/index.scss
+++ b/src/components/modals/create_team/index.scss
@@ -3,7 +3,7 @@
 
 .hiring-post-modal{
     width: 50vw;
-    height: 80vh;
+    height: fit-content;
     position: absolute;
     top: 50%;
     left: 50%;
