New Team Updates

--- a/src/components/modals/join_class/index.scss
+++ b/src/components/modals/join_class/index.scss
@@ -2,7 +2,7 @@
 @use '../../../styles/mixins';
 
 .join-class-modal {    
-    width: 440px;
+    width: fit-content;
     position: absolute;
     top: 50%;
     left: 50%;
